Avoid jumping effect on FAB across pages #11131
FAB have identical position on all pages. This includes listing, detail
for creation, detail for update, and pages with custom FAB such as
transaction update

--- a/client/styles.scss
+++ b/client/styles.scss
@@ -52,13 +52,6 @@ a.mat-ripple {
     max-width: 1300px;
 }
 
-.detail-speed-dial {
-    position: fixed;
-    right: 20px;
-    bottom: 20px;
-    z-index: 999; // < than 1000 that is the z-index of overlay contents
-}
-
 mat-form-field.no-bottom-spacing {
     margin-bottom: -1.34375em;
 }
